--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,5 @@
 <h2>New Tweet!</h2>
-<form action="/tweets" method="POST">
+<form class="tweet-compose" action="/tweets" method="POST">
   <input
       type="hidden"
       name="authenticity_token"
@@ -8,6 +8,7 @@
   <label>
     Content
     <textarea name="tweet[content]"></textarea>
+    <strong class= ".chars-left">Characters left: 140</strong>
   </label>
   <br>
 
